--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 name = "decode-do"
-route = { pattern = "*decode.do/*", zone_name = "decode.do" }
+route = { pattern = "*/*", zone_name = "decode.do" }
 main = "worker.js"
 usage_model = "unbound"
 compatibility_date = "2022-09-23"
