--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,8 +1,8 @@
 name = "decode-do"
-route = { pattern = "*/*", zone_name = "decode.do" }
+route = { pattern = "*decode.do/*", zone_name = "decode.do" }
 main = "worker.js"
 usage_model = "unbound"
-compatibility_date = "2022-09-23"
+compatibility_date = "2022-10-23"
 
 services = [
   { binding = "CTX", service = "ctx-do", environment = "production" }
